--- a/mypackage1/pyproject.toml
+++ b/mypackage1/pyproject.toml
@@ -21,10 +21,6 @@ where = ["."]
 include = [
     "mypkg*",
     "otherpkg*",
-]
-
-[tool.setuptools]
-py-modules = [
     "fibo",
 ]
 
@@ -60,6 +56,7 @@ warn_unused_configs = true
 warn_redundant_casts = true
 warn_unused_ignores = true
 strict_equality = true
+extra_checks = true
 check_untyped_defs = true
 disallow_subclassing_any = true
 disallow_untyped_decorators = true
@@ -154,14 +151,14 @@ deps =
     mypy
     pytest
 commands =
-    python -m mypy {posargs:mypkg otherpkg fibo.py tests}
+    python -m mypy {posargs:mypkg otherpkg fibo tests}
 
 [testenv:black]
 description = run format checks
 deps =
     black
 commands =
-    python -m black --check {posargs:mypkg otherpkg fibo.py tests}
+    python -m black --check {posargs:mypkg otherpkg fibo tests}
 skip_install = true
 
 [testenv:ruff]
@@ -169,6 +166,6 @@ description = run lint checks
 deps =
     ruff
 commands =
-    python -m ruff {posargs:mypkg otherpkg fibo.py tests}
+    python -m ruff {posargs:mypkg otherpkg fibo tests}
 skip_install = true
 """
