--- a/mypackage2/pyproject.toml
+++ b/mypackage2/pyproject.toml
@@ -19,11 +19,6 @@ dependencies = {file = "requirements.txt"}
 [tool.setuptools.packages.find]
 where = ["src"]
 
-[tool.setuptools]
-py-modules = [
-    "fibo",
-]
-
 [tool.black]
 line-length = 120
 target-version = [
@@ -62,6 +57,7 @@ warn_unused_configs = true
 warn_redundant_casts = true
 warn_unused_ignores = true
 strict_equality = true
+extra_checks = true
 check_untyped_defs = true
 disallow_subclassing_any = true
 disallow_untyped_decorators = true
