--- a/mypackage1/MANIFEST.in
+++ b/mypackage1/MANIFEST.in
@@ -1,4 +1,6 @@
-global-include py.typed
+include mypkg/py.typed
+include otherpkg/py.typed
+include fibo/py.typed
 
 include otherpkg/subpkg1/holidays.json
 include otherpkg/subpkg1/resources1/*.json
