--- a/mypackage1/pyproject.toml
+++ b/mypackage1/pyproject.toml
@@ -72,7 +72,7 @@ addopts = [
     "--import-mode=importlib",
     "--verbose",
 ]
-testpaths = ["tests"]
+testpaths = ["tests/"]
 
 [tool.ruff]
 line-length = 120
@@ -87,7 +87,7 @@ select = [
     "C4",     # flake8-comprehensions
     "PT",     # flake8-pytest-style
 ]
-src = ["."]
+src = ["./"]
 target-version = "py38"
 
 [tool.tox]
@@ -154,14 +154,14 @@ commands =
     python -m mypy -p fibo
     python -m mypy -p mypkg
     python -m mypy -p otherpkg
-    python -m mypy tests
+    python -m mypy tests/
 
 [testenv:black]
 description = run format checks
 deps =
     black
 commands =
-    python -m black --check fibo mypkg otherpkg tests
+    python -m black --check fibo/ mypkg/ otherpkg/ tests/
 skip_install = true
 
 [testenv:ruff]
@@ -169,6 +169,6 @@ description = run lint checks
 deps =
     ruff
 commands =
-    python -m ruff fibo mypkg otherpkg tests
+    python -m ruff fibo/ mypkg/ otherpkg/ tests/
 skip_install = true
 """
