--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 __pycache__/
+.idea/*
 .mypy_cache/
 .pytest_cache/
 .ruff_cache/
@@ -12,5 +13,4 @@ dist/
 .coverage*
 .DS_Store
 
-!.vscode/launch.json
 !.vscode/settings.json
