--- a/mypackage1/pyproject.toml
+++ b/mypackage1/pyproject.toml
@@ -1,17 +1,19 @@
 [build-system]
-requires = ["setuptools"]
+requires = ["setuptools>=64", "setuptools_scm>=8"]
 build-backend = "setuptools.build_meta"
 
 [project]
 name = "mypackage1"
-version = "0.0.1"
 readme = "README.md"
 requires-python = ">=3.8"
 license = {file = "LICENSE"}
 authors = [
     {name = "My Name", email = "my.name@example.com"},
 ]
-dynamic = ["dependencies"]
+dynamic = ["dependencies", "version"]
+
+[tool.setuptools_scm]
+# can be empty if no extra settings are needed, presence enables setuptools_scm
 
 [tool.setuptools.dynamic]
 dependencies = {file = "requirements.txt"}
@@ -22,14 +24,6 @@ include = [
     "fibo",
     "mypkg*",
     "otherpkg*",
-]
-
-[tool.black]
-line-length = 120
-target-version = [
-    "py38",
-    "py39",
-    "py310",
 ]
 
 [tool.coverage.run]
@@ -96,7 +90,6 @@ legacy_tox_ini = """
 env_list =
     py{38, 39, 310}
     mypy-py{38, 39, 310}
-    black
     ruff
 skip_missing_interpreters = true
 
@@ -156,19 +149,19 @@ commands =
     python -m mypy -p otherpkg
     python -m mypy tests/
 
-[testenv:black]
+[testenv:ruffformat]
 description = run format checks
 deps =
-    black
+    ruff
 commands =
-    python -m black --check fibo/ mypkg/ otherpkg/ tests/
+    python -m ruff format --check fibo/ mypkg/ otherpkg/ tests/
 skip_install = true
 
-[testenv:ruff]
+[testenv:rufflint]
 description = run lint checks
 deps =
     ruff
 commands =
-    python -m ruff fibo/ mypkg/ otherpkg/ tests/
+    python -m ruff check --check fibo/ mypkg/ otherpkg/ tests/
 skip_install = true
 """
