--- a/mypackage2/pyproject.toml
+++ b/mypackage2/pyproject.toml
@@ -10,7 +10,7 @@ license = {file = "LICENSE"}
 authors = [
     {name = "My Name", email = "my.name@example.com"},
 ]
-dynamic = ["dependencies", "version]
+dynamic = ["dependencies", "version"]
 
 [tool.setuptools_scm]
 # can be empty if no extra settings are needed, presence enables setuptools_scm
