--- a/mypackage2/pyproject.toml
+++ b/mypackage2/pyproject.toml
@@ -71,6 +71,10 @@ testpaths = ["tests/"]
 
 [tool.ruff]
 line-length = 120
+src = ["src/"]
+target-version = "py38"
+
+[tool.ruff.lint]
 select = [
     "F",      # Pyflakes
     "E", "W", # pycodestyle
@@ -82,8 +86,6 @@ select = [
     "C4",     # flake8-comprehensions
     "PT",     # flake8-pytest-style
 ]
-src = ["src/"]
-target-version = "py38"
 
 [tool.tox]
 legacy_tox_ini = """
