--- a/mypackage1/pyproject.toml
+++ b/mypackage1/pyproject.toml
@@ -1,16 +1,19 @@
 [build-system]
-requires = ["setuptools>=64", "setuptools_scm>=8"]
+requires = ["setuptools>=64"]
+# requires = ["setuptools>=64", "setuptools_scm>=8"]
 build-backend = "setuptools.build_meta"
 
 [project]
 name = "mypackage1"
+version = "0.0.1"
 readme = "README.md"
 requires-python = ">=3.8"
 license = {file = "LICENSE"}
 authors = [
     {name = "My Name", email = "my.name@example.com"},
 ]
-dynamic = ["dependencies", "version"]
+dynamic = ["dependencies"]
+# dynamic = ["dependencies", "version"]
 
 [tool.setuptools_scm]
 # can be empty if no extra settings are needed, presence enables setuptools_scm
@@ -23,6 +26,7 @@ where = ["."]
 include = [
     "fibo",
     "mypkg*",
+    "namespacepkg*",
     "otherpkg*",
 ]
 
@@ -37,6 +41,7 @@ parallel = true
 source_pkgs = [
     "fibo",
     "mypkg",
+    "namespacepkg",
     "otherpkg",
 ]
 
@@ -46,6 +51,10 @@ skip_covered = false
 skip_empty = true
 
 [tool.mypy]
+explicit_package_bases = true
+mypy_path = [
+    "$MYPY_CONFIG_FILE_DIR/",
+]
 warn_unused_configs = true
 warn_redundant_casts = true
 warn_unused_ignores = true
@@ -94,8 +103,8 @@ mark-parentheses = false
 legacy_tox_ini = """
 [tox]
 env_list =
-    py{38, 39, 310}
-    mypy-py{38, 39, 310}
+    py{38, 39, 310, 311, 312}
+    mypy-py{38, 39, 310, 311, 312}
     ruffformat
     rufflint
 skip_missing_interpreters = true
@@ -119,7 +128,7 @@ labels =
     coverage
 skip_install = true
 
-[testenv:coveragerun-py{38, 39, 310}]
+[testenv:coveragerun-py{38, 39, 310, 311, 312}]
 description = measure code coverage
 deps =
     coverage[toml]
@@ -139,13 +148,13 @@ commands =
     python -m coverage combine
     python -m coverage report
 depends =
-    coveragerun-py{38, 39, 310}
+    coveragerun-py{38, 39, 310, 311, 312}
 labels =
     coverage
 skip_install = true
 parallel_show_output = true
 
-[testenv:mypy-py{38, 39, 310}]
+[testenv:mypy-py{38, 39, 310, 311, 312}]
 description = run type checks
 deps =
     mypy
@@ -153,15 +162,16 @@ deps =
 commands =
     python -m mypy -p fibo
     python -m mypy -p mypkg
+    python -m mypy -p namespacepkg
     python -m mypy -p otherpkg
-    python -m mypy --explicit-package-bases tests/
+    python -m mypy tests/
 
 [testenv:ruffformat]
 description = run format checks
 deps =
     ruff
 commands =
-    python -m ruff format --check fibo/ mypkg/ otherpkg/ tests/
+    python -m ruff format --check fibo/ mypkg/ namespacepkg/ otherpkg/ tests/
 skip_install = true
 
 [testenv:rufflint]
@@ -169,6 +179,6 @@ description = run lint checks
 deps =
     ruff
 commands =
-    python -m ruff check fibo/ mypkg/ otherpkg/ tests/
+    python -m ruff check fibo/ mypkg/ namespacepkg/ otherpkg/ tests/
 skip_install = true
 """
